--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Finders-keepers_72504
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72504-h/images/cover.jpg
 creator:
   author:
     agent_name: Marlowe, Stephen
@@ -17,6 +20,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/32369
     wikipedia: https://en.wikipedia.org/wiki/Stephen_Marlowe
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72504#Finders-keepers
 gutenberg_issued: '2023-12-25'
 gutenberg_type: Text
 identifiers:
